fix select z-index

--- a/src/elements/pbx-select/local.sass
+++ b/src/elements/pbx-select/local.sass
@@ -18,6 +18,7 @@
         &.bottom
             > .select_options
                 top: 100%
+                z-index: 20
         &.top
             > .select_options
                 bottom: 100%
